# lazylens

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
docs/: plan.md
lazylens/: __init__.py  cli.py  config.py  db.py  extract.py  indexing.py  models.py  paths.py  tui.py
lazylens/indexers/: __init__.py  adapters.py  confluence.py  jira.py  local.py
tests/: test_cli.py  test_config.py  test_confluence_indexer.py  test_db.py  test_extract.py  test_indexing.py  test_jira_indexer.py  test_local_indexer.py  test_tui.py
